@@ -15,6 +15,8 @@ It has been supported by the ANR (ANR-08-CORD-010)
 Version 0.78
 - reset message addressed to a scene clears the scene rootPath
 - quantification introduced to $date variable
+- automatic numbering of exports when destination file is not completely specified 
+  (no name, no extension)
 
 ----------------------------------------------------
 Version 0.77
